# SpikingNeuralNetworks

./: .gitignore  Cargo.toml  Makefile  PARALLEL_TRAINING.md  README.MD
src/: constants.rs  data.rs  main.rs  network.rs  neuron.rs  reward_system.rs  setup.rs  simulation.rs  spike_event.rs  synapse.rs  testing.rs  training.rs  utils.rs  visualization.rs
src/datastructures/: exponential_rolling_mean.rs  mod.rs  rolling_mean.rs
