[package]
name = "SNN"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
plotters = "0.3.6"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
graphviz-rust = "0.7.0"
petgraph = { version = "0.6.5", features = ["graphmap"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
